force-app/main/default/objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a specific instance of the product and all of the related components that make up the specific instance.</description>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>