force-app/main/default/objects/Release__c/fields/Adapt_Ongoing_Support__c.field-meta.xml
<CustomField>
    <fullName>Adapt_Ongoing_Support__c</fullName>
    <description>Number of days for support</description>
    <label>Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>