force-app/main/default/objects/Release__c/fields/Build_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Build_End_Date__c</fullName>
    <description>End Date for build</description>
    <label>Build End Date</label>
    <type>Date</type>
</CustomField>