force-app/main/default/objects/Release__c/fields/Build_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Build_Start_Date__c</fullName>
    <description>Start Date for build</description>
    <label>Build Start Date</label>
    <type>Date</type>
</CustomField>