force-app/main/default/objects/Release__c/fields/Build_Unit_Test__c.field-meta.xml
<CustomField>
    <fullName>Build_Unit_Test__c</fullName>
    <description>Estimated effort in days for build</description>
    <label>Build</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>