force-app/main/default/objects/Release__c/fields/Deploy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deploy_End_Date__c</fullName>
    <description>Deployment end date</description>
    <label>Deploy End Date</label>
    <type>Date</type>
</CustomField>