force-app/main/default/objects/Release__c/fields/Deploy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Start_Date__c</fullName>
    <description>Deployment start date</description>
    <label>Deploy Start Date</label>
    <type>Date</type>
</CustomField>