force-app/main/default/objects/Release__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description>Number of days required for design</description>
    <label>Design</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>