force-app/main/default/objects/Release__c/fields/Design_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_End_Date__c</fullName>
    <description>End Date for design phase</description>
    <label>Design End Date</label>
    <type>Date</type>
</CustomField>