force-app/main/default/objects/Release__c/fields/Design_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Start_Date__c</fullName>
    <description>Start date for design</description>
    <label>Design Start Date</label>
    <type>Date</type>
</CustomField>