force-app/main/default/objects/Release__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of this release.</description>
    <inlineHelpText>Owner of this release.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>