force-app/main/default/objects/Release__c/fields/Parent_Release__c.field-meta.xml
<CustomField>
    <fullName>Parent_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select a release to which this release is related to.</description>
    <inlineHelpText>Select an existing release to which the current release is related to.</inlineHelpText>
    <label>Parent Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>