force-app/main/default/objects/Release__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <description>Estimated date of end</description>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>