force-app/main/default/objects/Release__c/fields/PMT2009_SIT__c.field-meta.xml
<CustomField>
    <fullName>PMT2009_SIT__c</fullName>
    <description>Number of days required for testing</description>
    <label>Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>