force-app/main/default/objects/Release__c/fields/PMT2009_Train_Deploy__c.field-meta.xml
<CustomField>
    <fullName>PMT2009_Train_Deploy__c</fullName>
    <description>Number of days required for deployment</description>
    <label>Deploy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>