force-app/main/default/objects/Release__c/fields/PMT2009_UAT__c.field-meta.xml
<CustomField>
    <fullName>PMT2009_UAT__c</fullName>
    <description>Number of days required for UAT</description>
    <label>UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>