force-app/main/default/objects/Release__c/fields/Proejct_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proejct_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>