force-app/main/default/objects/Release__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Release Number</description>
    <label>Release #</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>