force-app/main/default/objects/Release__c/fields/Release_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Actual_End_Date__c</fullName>
    <description>Actual date of end of release</description>
    <label>Release Actual End Date</label>
    <type>Date</type>
</CustomField>