force-app/main/default/objects/Release__c/fields/Release_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Planned_End_Date__c</fullName>
    <description>Estimated date of end of release</description>
    <label>Release Planned End Date</label>
    <type>Date</type>
</CustomField>