force-app/main/default/objects/Release__c/fields/Release_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Start_Date__c</fullName>
    <description>Start Date of release</description>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>