force-app/main/default/objects/Release__c/fields/Requirements_Gathering__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Gathering__c</fullName>
    <description>Total Level of Effort (Days) taken in plan</description>
    <label>Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>