force-app/main/default/objects/Release__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Displays a status as red, green or yellow ball</description>
    <inlineHelpText>Green: Milestone completion on target
Yellow: Milestone completion at risk
Red: Milestone completion planned to be missed or missed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>