force-app/main/default/objects/Release__c/fields/Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Status_Update__c</fullName>
    <description>Release status update</description>
    <inlineHelpText>Release status update</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>