force-app/main/default/objects/Release__c/fields/Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_End_Date__c</fullName>
    <description>End date for support</description>
    <label>Support End Date</label>
    <type>Date</type>
</CustomField>