force-app/main/default/objects/Release__c/fields/Support_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Start_Date__c</fullName>
    <description>Start date for support</description>
    <label>Support Start Date</label>
    <type>Date</type>
</CustomField>