force-app/main/default/objects/Release__c/fields/Test_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_End_Date__c</fullName>
    <description>End date for Test</description>
    <label>Test End Date</label>
    <type>Date</type>
</CustomField>