force-app/main/default/objects/Release__c/fields/Test_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Start_Date__c</fullName>
    <description>Start date for Test</description>
    <label>Test Start Date</label>
    <type>Date</type>
</CustomField>