force-app/main/default/objects/Release__c/fields/Total_Adapt_Ongoing_Support_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Adapt_Ongoing_Support_Capacity__c</fullName>
    <description>Total available support capacity</description>
    <label>Total Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>