force-app/main/default/objects/Release__c/fields/Total_Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Capacity__c</fullName>
    <description>Total available capacity which is sum of total available plan, design, build, test, UAT, deploy &amp; support capacity</description>
    <formula>Total_Plan_Capacity__c  +  Total_Design_Capacity__c  +  Total_Build_Capacity__c  +  Total_Test_Capacity__c  +  Total_Deploy_Capacity__c  +  Total_UAT__c  + Total_Adapt_Ongoing_Support_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>