force-app/main/default/objects/Release__c/fields/Total_Build_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Build_Capacity__c</fullName>
    <description>Total available build capacity</description>
    <label>Total Build</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>