force-app/main/default/objects/Release__c/fields/Total_Deploy_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Deploy_Capacity__c</fullName>
    <description>Total available deploy capacity</description>
    <label>Total Deploy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>