force-app/main/default/objects/Release__c/fields/Total_Design_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Design_Capacity__c</fullName>
    <description>Total available design capacity</description>
    <label>Total Design</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>