force-app/main/default/objects/Release__c/fields/Total_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate__c</fullName>
    <description>Total Level of Effort (Days) taken in plan, design, build, test, UAT, deploy &amp; support</description>
    <formula>Requirements_Gathering__c +  Design__c +  Build_Unit_Test__c +  PMT2009_SIT__c +  PMT2009_UAT__c +  PMT2009_Train_Deploy__c +  Adapt_Ongoing_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>