force-app/main/default/objects/Release__c/fields/Total_Plan_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Capacity__c</fullName>
    <description>Total available plan capacity</description>
    <label>Total Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>