force-app/main/default/objects/Release__c/fields/Total_Test_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Capacity__c</fullName>
    <description>Total available test capacity</description>
    <label>Total Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>