force-app/main/default/objects/Release__c/fields/Total_UAT__c.field-meta.xml
<CustomField>
    <fullName>Total_UAT__c</fullName>
    <description>Total available UAT capacity</description>
    <label>Total UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>