force-app/main/default/objects/Release__c/fields/UAT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_End_Date__c</fullName>
    <description>End date for UAT</description>
    <label>UAT End Date</label>
    <type>Date</type>
</CustomField>