force-app/main/default/objects/Release__c/fields/UAT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Start_Date__c</fullName>
    <description>Start date for UAT</description>
    <label>UAT Start Date</label>
    <type>Date</type>
</CustomField>