force-app/main/default/objects/Release__c/validationRules/Release_Actual_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Actual_End_Date_Validation</fullName>
    <active>true</active>
    <description>Actual end date should not be greater  than today&#39;s date</description>
    <errorConditionFormula>Release_Actual_End_Date__c  &gt; Today()</errorConditionFormula>
    <errorDisplayField>Release_Actual_End_Date__c</errorDisplayField>
    <errorMessage>Actual end date should not be greater  than today&#39;s date</errorMessage>
</ValidationRule>