force-app/main/default/objects/Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Release__c</columns>
    <columns>Release_Start_Date__c</columns>
    <columns>Release_Planned_End_Date__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>